--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-titile: Welcome to Singapore Originals homepage
+title: Welcome to Singapore Originals homepage
 description: We buy and deliver Singapore products to you.
